[package]
name = "tokio-lk"
version = "0.2.0"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zenixls2/tokio-lk"
homepage = "https://github.com/zenixls2/tokio-lk"
documentation = "https://docs.rs/tokio-lk/"
description = "Futures-aware lock-by-id primitives"
keywords = ["futures", "async", "future", "tokio", "mutex"]
categories = ["asynchronous"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "rt-util", "time", "macros"]}
futures = "0.3"
lazy_static = "1.4.0"
crossbeam = "0.7.3"
dashmap = "3.7.0"

[badges]
travis-ci = { repository = "zenixls2/tokio-lk" }

[package.metadata.doc.rs]
all-features = true
