[package]
name = "tokio-lk"
version = "0.2.2"
authors = ["zenix <zenixls2@gmail.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/zenixls2/tokio-lk"
homepage = "https://github.com/zenixls2/tokio-lk"
documentation = "https://docs.rs/tokio-lk/"
description = "Futures-aware lock-by-id primitives"
keywords = ["futures", "async", "future", "tokio", "mutex"]
categories = ["asynchronous"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["hashbrown"]
all = ["dashmap", "hashbrown"]

[profile.test]
default = ["all"]

[profile.bench]
default = ["all"]
opt-level = 3
lto = true

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "rt-util", "time", "macros"] }
futures = "0.3"
lazy_static = "1.4.0"
crossbeam = "0.7.3"
dashmap = { version = "3.7.0", optional = true }
hashbrown = { version = "0.7.1", features = ["nightly", "inline-more", "ahash", "ahash-compile-time-rng"], optional = true }

[badges]
travis-ci = { repository = "zenixls2/tokio-lk" }

[package.metadata.docs.rs]
all-features = true
